# api-adapter-ak

./: .gitignore  README.md  notes.md  prototype.py  pyproject.toml
notebooks/: adapter_only_training.ipynb  api_adapter_training.ipynb  cuad_qa_dataset_eda.ipynb  evaluation.ipynb  evaluation_api_adapter.ipynb  exploration.ipynb
notebooks/cuad/: cuad_qa_dataset_eda.ipynb  evaluating_api_only.ipynb
notebooks/ifbench/: eval_utils.py  evaluation.ipynb  gepa_optimize_adapter_system_prompt.ipynb  ifbench_claude_response_generator.py  ifbench_claude_response_generatory.ipynb  train.ipynb
notebooks/ifbench/src/: instructions.py  instructions_registry.py  instructions_util.py
scripts/: adapter_only_training.py  analyze_condition_d.py  api_adapter_training.py  api_adapter_training_ifbench.py  generate_dataset.py  run_baseline.py  test_direct.py  train_grpo.py
scripts/cuad/: dataset_generator.py  evaluating_api_only.py
scripts/ifbench/: gepa_optimize_adapter_system_prompt.py  ifbench_claude_response_generator.py  long_context_train.py  train.py
src/api_adapter/: api_client.py  dataset.py  evaluate.py  local_model.py  reward.py  symbols.py  train.py
src/api_adapter/ifbench/: eval_utils.py  instructions.py  instructions_util.py
tests/: test_symbols.py
