[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-adapter"
version = "0.1.0"
description = "Chain a local LoRA-adapted model to a proprietary API model to adapt its outputs"
requires-python = ">=3.10"
dependencies = [
    "anthropic[vertex]>=0.40.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.16.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "unsloth",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
