[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-adapter"
version = "0.1.0"
description = "Chain a local LoRA-adapted model to a proprietary API model to adapt its outputs"
requires-python = ">=3.10"
dependencies = [
    "anthropic[vertex]>=0.40.0",
    "datasets>=2.16.0",
    "immutabledict>=4.3.1",
    "jupyter>=1.1.1",
    "absl-py",
    "langdetect",
    "nltk",
    "immutabledict",
    "emoji",
    "syllapy",
    "unicodedata2",
    "setuptools",
    "httpx",
    "tqdm",
    "pydantic>=2",
    "pydantic-settings",
]

[project.optional-dependencies]
gpu = [
    "torch==2.10.0",
    "vllm==0.17.0",
    "trl==0.24.0",
    "unsloth==2026.3.4",
    "transformers==4.57.6",
    "peft==0.18.1",
    "accelerate==1.13.0",
    "wandb",
    "python-dotenv",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "matplotlib>=3.8.0",
]

[tool.ruff]
line-length = 100
